<?xml version="1.0"?>
<package format="2">
  <name>roboteq_bms</name>
  <version>0.1.0</version>
  <description>The roboteq_bms package, based on RComponent structure. </description>

  <maintainer email="jamendez@robotnik.es">Jose Antonio Mendez</maintainer>

  <author email="jamendez@robotnik.es">Jose Antonio Mendez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcomponent</exec_depend>

  <export>

  </export>
</package>
